syntax = "proto3";

package Contracts.Services.Order.Protobuf;

import "Abstractions/Abstractions.proto";

service OrderService {
  rpc GetOrderDetails(GetOrderDetailsRequest) returns (Abstractions.Protobuf.GetResponse);
  rpc ListOrdersGridItems(ListOrdersGridItemsRequest) returns (Abstractions.Protobuf.ListResponse);
}

// Requests

message GetOrderDetailsRequest {
  string OrderId = 1;
}

message ListOrdersGridItemsRequest {
  string CustomerId = 1;
  Abstractions.Protobuf.Paging Paging = 2;
}

// Projections

message OrderDetails {
  string OrderId = 1;
  string CustomerId = 2;
  string Total = 3;
  string Status = 4;
}

message OrderGridItem {
  string OrderId = 1;
  string CustomerId = 2;
  string Total = 3;
  string Status = 4;
}